# HelPhone

./: .env.production  .gitignore  AGENTS.md  CLAUDE.md  README.md  TODO.md  contrato-soroban.md  index.html  package-lock.json  package.json  render.yaml  vite.config.js
circuits/: Nargo.toml  Prover.toml
circuits/src/: main.nr
contract/contracts/helphone-contract/: Cargo.toml
contract/contracts/helphone-contract/src/: lib.rs  test.rs
contract/contracts/helphone-contract/test_snapshots/test/: creates_and_accepts_request.1.json  records_expert_verification_history.1.json
contracts/aegis_vault/: Cargo.toml
contracts/aegis_vault/src/: lib.rs
docs/: stellar-zk-runbook.md  zk-design.md
scripts/: dev.mjs
server/: index.js  package.json
src/: App.css  App.jsx  main.jsx
src/lib/: contract.js  zk.js
src/pages/: Help.jsx  Ranking.jsx
