[package]
name = "aegis_vault"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
soroban-sdk = { version = "26.0.1", default-features = false, features = ["alloc"] }
ultrahonk_soroban_contract = { path = "../noir_verifier" }

[dev-dependencies]
soroban-sdk = { version = "26.0.1", features = ["testutils", "alloc"] }
soroban-env-host = "26.1.3"

[features]
testutils = []

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
